# radar-pd-pip-prototype

./: README.md  build_runtime_wheel.py  install.ps1  install.sh
.github/workflows/: build-windows-runtime.yml
radar_pd/: pyproject.toml
radar_pd/src/radar_pd/: __init__.py  cli.py  commands.py  data.py  doctor.py  source.py
